# token-savior

./: README.md  llms-install.md  manifest  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
hooks/: memory-session-start.sh
scripts/: export_markdown.py  import_memory.py  ts_cli.py
self-explores/: _index.md
self-explores/context/: code-map.md  token-savior-design-principles.md
self-explores/history/: viec-2026-04-20.jsonl
self-explores/tasks/: token-savior-1ip-deep-research.md  token-savior-4p1-contextual-awareness-sad-diagrams.md  token-savior-5bn-code-mapping.md  token-savior-9t8-design-principles-report.md  token-savior-psl-strategic-evaluation.md  token-savior-yll-skill-transfer.md
src/mcp_codebase_index/: server.py
src/token_savior/: annotator.py  breaking_changes.py  c_annotator.py  cache_ops.py  checkpoint_ops.py  community.py  compact_ops.py  complexity.py  conf_annotator.py  config_analyzer.py  cross_project.py  csharp_annotator.py  dashboard.py  db_core.py  dead_code.py  docker_analyzer.py  edit_ops.py  entry_points.py  git_tracker.py  go_annotator.py  gradle_annotator.py  hcl_annotator.py  impacted_tests.py  ini_annotator.py  java_annotator.py  java_quality.py  json_annotator.py  leiden_communities.py  markov_prefetcher.py  memory_db.py  memory_schema.sql  models.py  project_actions.py  project_indexer.py  python_annotator.py  query_api.py  rust_annotator.py  server.py  server_runtime.py  server_state.py  (+8 more)
src/token_savior/memory/: bus.py  corpora.py  dedup.py  distillation.py  events.py  health.py  index.py  links.py  observations.py  prompts.py  sessions.py  summaries.py  viewer.py
src/token_savior/server_handlers/: __init__.py  analysis.py  code_nav.py  memory.py  stats.py  tests.py
tests/: test_batch_mode.py  test_breaking_changes.py  test_cache_ops.py  test_community.py  test_compact_ops.py  test_complexity.py  test_config_analyzer.py  test_config_integration.py  test_cross_project.py  test_dead_code.py  test_docker_analyzer.py  test_entry_points.py  test_git_tracker.py  test_impacted_tests.py  test_incremental.py  test_java_indexing.py  test_java_quality.py  test_java_spring_support.py  test_markup_c.py  test_markup_conf.py  test_markup_csharp.py  test_markup_go.py  test_markup_gradle.py  test_markup_hcl.py  test_markup_java.py  test_markup_json.py  test_markup_python.py  test_markup_rust.py  test_markup_typescript.py  test_markup_xml.py  test_markup_yaml.py  test_memory_hybrid_search.py  test_memory_public_surface.py  test_memory_session_rollup.py  test_memory_viewer.py  test_project_actions.py  test_project_indexer.py  test_query_api.py  test_server.py  test_server_integration.py  (+4 more)
