[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "token-savior-recall"
version = "2.0.0"
description = "Structural codebase MCP server with persistent memory engine — 97% token savings + cross-session recall for Claude Code"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mibay"},
]
keywords = ["mcp", "codebase", "indexer", "code-navigation", "structural-analysis", "c", "glsl", "python", "typescript", "go", "rust"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "PyYAML>=6.0",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-java>=0.23,<0.24",
]

[project.optional-dependencies]
mcp = ["mcp>=1.25"]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.5"]
benchmark = ["aiohttp>=3.9"]

[project.scripts]
token-savior = "token_savior.server:main_sync"
token-savior-dashboard = "token_savior.dashboard:main"
token-savior-bench = "benchmarks.run_benchmarks:main"

[project.urls]
Homepage = "https://github.com/Mibayy/token-savior"
Repository = "https://github.com/Mibayy/token-savior"

[tool.hatch.build.targets.wheel]
packages = ["src/token_savior"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
